--- a/static/css/style.css
+++ b/static/css/style.css
@@ -39,7 +39,7 @@ section h1{
     margin-top: -15vh;
     background: #fff;
     width: 400px;
-    height: 325px;
+    height: 300px;
     display:flexbox;
     box-shadow: 0 0 0.2vh  #000;
     border-top-right-radius: 5px;
@@ -54,7 +54,7 @@ section h1{
     margin-top: -15vh;
     background: #fff;
     width: 400px;
-    height: 400px;
+    height: 350px;
     display:flexbox;
     box-shadow: 0 0 0.2vh  #000;
     border-top-right-radius: 5px;
@@ -104,117 +104,58 @@ form{
 
 form p{
     font-family: Verdana, Tahoma, sans-serif;
-    font-size: 3vh;
+    font-size: 20px;
     color: #000;
 
 }
 
 form label{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 2vh;
+    font-size: 20px;
     color: rgb(95, 92, 92);
 }
 
 input{
-    margin-bottom: 2.5vh;
-    margin-top: 1vh;
-    font-size: 2vh;
+    margin-bottom: 20px;
+    margin-top: 10px;
+    font-size: 20px;
 }
 
 input.user_inicio{
-    margin-bottom: 2.5vh;
-    margin-top: 1vh;
-    font-size: 2vh;
-    padding: 2vh;
+    margin-bottom: 20px;
+    margin-top: 10px;
+    font-size: 20px;
+    padding: 10px;
     border-radius: 5px;
     border:none;
     outline: none;
-    box-shadow: 0 0 0.2vh #000;
+    box-shadow: 0 0 3px #000;
 }
 input.user_inicio:focus{
-    box-shadow: 0 0 0.5vh #3483fa, 0 0 0.5vh #3483fa, 0 0 0.5vh #3483fa, 0 0 0.5vh #3483fa, 0 0 0.5vh #3483fa, 0 0 0.5vh #3483fa, 0 0 0.5vh #3483fa, 0 0 0.5vh #3483fa, 0 0 0.5vh #3483fa, 0 0 0.5vh #3483fa;
+    box-shadow: 0 0 3px #3483fa, 0 0 3px #3483fa, 0 0 3px #3483fa, 0 0 3px #3483fa, 0 0 3px #3483fa, 0 0 3px #3483fa, 0 0 3px #3483fa, 0 0 10px #3483fa, 0 0 3px #3483fa, 0 0 3px #3483fa;
 }
 .btn{
     font-family: Verdana, Tahoma, sans-serif;
     width: 100%;
-    font-size: 2vh;
-    padding:2vh 1vh;
+    font-size: 20px;
+    padding:10px 5px;
     background: #3483fa;
     color: #fff;
     font-weight: bolder;
     border:none;
     border-radius: 5px;
     margin: auto;
-    margin-bottom: 2vh;
+    margin-bottom: 5px;
     transition: 0.5s;
 }
 
 .btn:hover{
-    font-family: Verdana, Tahoma, sans-serif;
-    width: 100%;
-    font-size: 2vh;
-    font-weight: bolder;
     background: #256ad3;
     color: #fff;
     transition: 0.5s;
 }
 
-a.linkedin{
-    font-family: 'Harabara',Verdana;
-    text-decoration: none;
-    color: rgb(214, 206, 206);
-    font-size: 1.5vh;
-    margin-top: 4vh;
-    margin: auto;
-    transition: 0.5s;
-}
-a.linkedin:hover{
-    font-family: 'Harabara',Verdana;
-    color: rgb(132, 181, 255);
-    transition: 0.5s;
-}
-a.crearcuenta{
-    font-family: Verdana, Tahoma, sans-serif;
-    text-decoration: none;
-    width: 100%;
-    font-size: 2vh;
-    padding:2vh 1vh;
-    background: none;
-    color: #3483fa;
-    font-weight: bolder;
-    border-radius: 5px;
-    margin: auto;
-    margin-bottom: 2vh;
-    transition: 0.5s;
-}
-a.crearcuenta:hover{
-    background: #3483fa1a;
-    transition: 0.5s;
-}
-a.help{
-    display: block;
-    width: 60VH;
-    height: 2VH;
-    font-family: Verdana, Tahoma, sans-serif;
-    text-decoration: none;
-    font-size: 2vh;
-    position: relative;
-    margin: auto;
-    margin-top: 0;
-    color: #3483fa;
-    font-weight: bolder;
-    padding: 4vh 0;
-    background: #fff;
-    box-shadow: 0 0 0.2vh  #000;
-    text-align: center;
-    border-bottom-right-radius: 5px;
-    border-bottom-left-radius: 5px;
-    transition: 0.5s;
-}
-a.help:hover{
-    background: rgba(238, 238, 238, 0.521);
-    transition: 0.5s;
-}
+
 
 @media screen and (max-width: 1000px) {
     
